--- a/AIHUB/SSL/models/relative_loc/config.yaml
+++ b/AIHUB/SSL/models/relative_loc/config.yaml
@@ -1,16 +1,17 @@
 # 학습 관련 하이퍼파라미터
 config: './config.yaml'
+data: 'tiny-imagenet'
 data_dir: './tiny-imagenet-200'
 batch_size: 256     
-epochs: 10          
+epochs: 1          
 lr: 0.01   
 
 seed: 42
+num_workers: 1
 device: 'cuda'         
-num_workers: 2
-logger: None
-per_save: 20    
-save_dir: './saved_models' 
+save_interval: 20    
+save_path: 'save'
+checkpoint: null
 
 patch_size: 15
 jitter: 3
